[tool.poetry]
name = "text2ipa"
version = "2.1.2"
description = "Convert text to IPA for English and French"
authors = ["Joseph Quang <tquangsdh20@hcmut.edu.vn>"]
readme = "README.md"
repository = "https://github.com/tquangsdh20/text2ipa"
license = "Apache 2.0"
classifiers = [
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]
packages = [
    { include = "text2ipa" },
    { include = "text2ipa/*.py" },
]


[tool.poetry.dependencies]
python = "^3.6"

requests = "^2.23"
bs4 = "^0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9"
tox = "^3.9"
pytest-cov = "^2.12"
mypy = "^0.910"
epitran = "^1.15"
eng-to-ipa="^0.1"
black = "^0.0"

[build-system]
requires = ["poetry-core>=1.0.0","wheel","setuptools"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = "--cov=text2ipa"
testpaths = [
    "tests",
]

[tool.mypy]
mypy_path = "stubs"
check_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
ignore_missing_imports = true
