[metadata]
name = text2ipa
version = 1.4.1
description = Converter from text to International Phonetic Alphabets
long_description = file: README.md
long_description_content_type = text/markdown
author = Joseph Quang
author_email = tquang.sdh20@hcmut.edu.vn
url = https://github.com/tquangsdh20/text2ipa
license = Apache 2.0
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32, macOS
classifiers = 
    Intended Audience :: Education
    Intended Audience :: End Users/Desktop
    Development Status :: 5 - Production/Stable
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options.packages.find]
where=src

[bdist_wheel]
universal = true

[flake8]
max-line-length = 88
extend-ignore =
    E203

[options]
packages = 
    text2ipa
install_requires =
    requests>=2.23
	PySocks>=1.7
    bs4
package_dir =
    =.
include_package_data = yes
zip_safe = no
keywords = 
    text2ipa
    text to ipa
    text converter
    text translate
    ipa